# spectra

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CNAME  DavidsonSymEigen_example.md  JDSymEigsDPR_Example.md  README.md  _config.yml  conda_build_config.yaml  download.md  index.md  performance.md  quick-start.md  r-interface.md  upgrade.md
.github/workflows/: Basic.yml  basic.yml  checkformat.yml  codecov.yml
_includes/: footer.html  head.html  header.html  sidebar.html
_layouts/: default.html  page.html
benchmark/: ArpackFun.h  Cpp.cpp  F77.cpp  Makefile  main.cpp  result_analyzer.R
cmake/: CPM.cmake  FindCLANG_FORMAT.cmake  spectra-config.cmake.in
conda/: build.sh  meta.yaml
css/: hljs-gh.css  hljs-vs.css  style.css
doc/: CompInfo_8h_source.html  DavidsonSymEigsSolver_8h_source.html  DenseCholesky_8h_source.html  DenseGenComplexShiftSolve_8h_source.html  DenseGenMatProd_8h_source.html  DenseGenRealShiftSolve_8h_source.html  DenseHermMatProd_8h_source.html  DenseSymMatProd_8h_source.html  DenseSymShiftSolve_8h_source.html  GEigsMode_8h_source.html  GenEigsBase_8h_source.html  GenEigsComplexShiftSolver_8h_source.html  GenEigsRealShiftSolver_8h_source.html  GenEigsSolver_8h_source.html  HermEigsBase_8h_source.html  HermEigsSolver_8h_source.html  JDSymEigsBase_8h_source.html  Overview_8md_source.html  SelectionRule_8h_source.html  SimpleRandom_8h_source.html  SparseCholesky_8h_source.html  SparseGenComplexShiftSolve_8h_source.html  SparseGenMatProd_8h_source.html  SparseGenRealShiftSolve_8h_source.html  SparseHermMatProd_8h_source.html  SparseRegularInverse_8h_source.html  SparseSymMatProd_8h_source.html  SparseSymShiftSolve_8h_source.html  SymEigsBase-debug_8h_source.html  SymEigsBase_8h_source.html  SymEigsShiftSolver_8h_source.html  SymEigsSolver_8h_source.html  SymGEigsCholeskyOp_8h_source.html  SymGEigsShiftSolver_8h_source.html  SymGEigsSolver_8h_source.html  SymShiftInvert_8h_source.html  TypeTraits_8h_source.html  Version_8h_source.html  annotated.html  annotated.js  (+154 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+24 more)
doxygen/: Doxyfile  Overview.md
examples/: CMakeLists.txt  DavidsonSymEigen_example.cpp  DavidsonSymEigen_example.md  DavidsonSymEigs_example.cpp
include/: CompInfo.h  DoubleShiftQR.h  GenEigsComplexShiftSolver.h  GenEigsRealShiftSolver.h  GenEigsSolver.h  SelectionRule.h  SimpleRandom.h  SymEigsShiftSolver.h  SymEigsSolver.h  SymGEigsSolver.h  SymSparseEigsSolverLOBPCG.h  TridiagEigen.h  UpperHessenbergQR.h
include/LinAlg/: DoubleShiftQR.h  TridiagEigen.h  UpperHessenbergEigen.h  UpperHessenbergQR.h
include/MatOp/: DenseCholesky.h  DenseGenComplexShiftSolve.h  DenseGenMatProd.h  DenseGenRealShiftSolve.h  DenseSymMatProd.h  DenseSymShiftSolve.h  SparseCholesky.h  SparseGenMatProd.h  SparseGenRealShiftSolve.h  SparseRegularInverse.h  SparseSymMatProd.h  SparseSymShiftSolve.h  SymGEigsCholeskyOp.h  SymGEigsRegInvOp.h
include/Spectra/: DavidsonSymEig.h  DavidsonSymEigsSolver.h  GenEigsBase.h  GenEigsComplexShiftSolver.h  GenEigsRealShiftSolver.h  GenEigsSolver.h  HermEigsBase.h  HermEigsSolver.h  JDSymEigsBase.h  JDSymEigsDPR.h  JD_SymEigsBase.h  KrylovSchurGEigsBase.h  KrylovSchurGEigsSolver.h  LoggerBase.h  SymEigsBase.h  SymEigsShiftSolver.h  SymEigsSolver.h  SymGEigsShiftSolver.h  SymGEigsSolver.h
include/Spectra/LinAlg/: Arnoldi.h  BKLDLT.h  DoubleShiftQR.h  Givens.h  GramSchmidt.h  KrylovSchur.h  Lanczos.h  Orthogonalization.h  RitzPairs.h  SearchSpace.h  TridiagEigen.h  UpperHessenbergEigen.h  UpperHessenbergQR.h  UpperHessenbergSchur.h
include/Spectra/MatOp/: DenseCholesky.h  DenseGenComplexShiftSolve.h  DenseGenMatProd.h  DenseGenRealShiftSolve.h  DenseHermMatProd.h  DenseSymMatProd.h  DenseSymShiftSolve.h  SparseCholesky.h  SparseGenComplexShiftSolve.h  SparseGenMatProd.h  SparseGenRealShiftSolve.h  SparseHermMatProd.h  SparseRegularInverse.h  SparseRegularInverseLU.h  SparseSymMatProd.h  SparseSymShiftSolve.h  SymShiftInvert.h
include/Spectra/MatOp/internal/: ArnoldiOp.h  SymGEigsBucklingOp.h  SymGEigsCayleyOp.h  SymGEigsCholeskyOp.h  SymGEigsRegInvLUOp.h  SymGEigsRegInvOp.h  SymGEigsShiftInvertOp.h
include/Spectra/Util/: CompInfo.h  GEigsMode.h  RitzPairs.h  SearchSpace.h  SelectionRule.h  SimpleRandom.h  TypeTraits.h  Version.h
include/Spectra/contrib/: LOBPCGSolver.h  PartialSVDSolver.h  SymSparseEigsSolverLOBPCG.h
include/Spectra/internal/: SymEigsBase.h
include/Util/: CompInfo.h  GEigsMode.h  SelectionRule.h  SimpleRandom.h  TypeTraits.h
js/: highlight.pack.js  script.js
test/: .gitignore  Arnoldi.cpp  BKLDLT.cpp  CMakeLists.txt  ComplexEigs.cpp  DavidsonSymEig.cpp  DavidsonSymEigen_example.cpp  DavidsonSymEigs.cpp  DenseGenMatProd.cpp  DenseSymMatProd.cpp  Eigen.cpp  EigenIOFile.h  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  GenEigs.cpp  GenEigsComplexShift.cpp  GenEigsRealShift.cpp  Givens.cpp  GramSchmidt.cpp  HermEigs.cpp  JDSymEigsBase.cpp  JDSymEigsDPR.cpp  JDSymEigsDPRConstructor.cpp  JDSymEigsDPR_example.cpp  KrylovSchur.cpp  LoggingDavidsonSymEigs.cpp  LoggingGenEigs.cpp  LoggingSymEigs.cpp  Makefile  Orthogonalization.cpp  QR.cpp  RitzPairs.cpp  SVD.cpp  Schur.cpp  SearchSpace.cpp  SparseGenMatProd.cpp  SparseSymMatProd.cpp  SymEigs.cpp  (+7 more)
